# kagua

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: HANDOFF.md  PUBLISHING.md  kagua-spec.md  kagua-user-stories.md
fixtures/otel/: generate_openllmetry.py  openllmetry-langchain.json  spans.json
fixtures/scope-drift/: envelope.yaml  trace.jsonl
fixtures/workorder/: generate.py  trace.jsonl
src/kagua/: __init__.py  cli.py  envelope.py  events.py  render.py  trace.py  verdict.py
src/kagua/checks/: __init__.py  composition.py  lifetime.py  principal.py  scope.py
src/kagua/ingest/: __init__.py  otel.py
tests/: conftest.py  test_checks_composition.py  test_checks_lifetime.py  test_checks_principal.py  test_checks_scope.py  test_cli.py  test_demo_fixture.py  test_envelope.py  test_events.py  test_otel_ingest.py  test_otel_real_export.py  test_trace.py  test_verdict.py
tools/: render_demo_svg.py  sanitize_export.py
