[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kagua"
version = "0.1.0"
description = "Authority verification harness for AI agents: replay traces against declared authority envelopes and fail the build when the composition of actions exceeds what any principal authorized."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Daniel Nakitare" }]
keywords = ["ai-agents", "authorization", "audit", "trace", "verification", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kagua = "kagua.cli:main"

[project.urls]
Homepage = "https://github.com/Dnakitare/kagua"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
